// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/sidebarCategory sidebar call hideSidebar 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_0_"
    data-rfd-droppable-id="droppable_id"
  >
    <div
      data-rfd-draggable-context-id="_r_0_"
      data-rfd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rfd-droppable-context-id="_r_0_"
          data-rfd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category expanded "
          >
            <div
              aria-describedby="rfd-hidden-text-_r_0_-hidden-text-_r_1_"
              class="octo-sidebar-title category-title"
              data-rfd-drag-handle-context-id="_r_0_"
              data-rfd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-down ChevronDownIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_0_"
            data-rfd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_0_-hidden-text-_r_1_"
              class="SidebarBoardItem subitem "
              data-rfd-drag-handle-context-id="_r_0_"
              data-rfd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_0_"
            data-rfd-draggable-id="board_2_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_0_-hidden-text-_r_1_"
              class="SidebarBoardItem subitem "
              data-rfd-drag-handle-context-id="_r_0_"
              data-rfd-drag-handle-draggable-id="board_2_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar call hideSidebar 2`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_0_"
    data-rfd-droppable-id="droppable_id"
  >
    <div
      data-rfd-draggable-context-id="_r_0_"
      data-rfd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rfd-droppable-context-id="_r_0_"
          data-rfd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category expanded "
          >
            <div
              aria-describedby="rfd-hidden-text-_r_0_-hidden-text-_r_1_"
              class="octo-sidebar-title category-title"
              data-rfd-drag-handle-context-id="_r_0_"
              data-rfd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-down ChevronDownIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_0_"
            data-rfd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_0_-hidden-text-_r_1_"
              class="SidebarBoardItem subitem "
              data-rfd-drag-handle-context-id="_r_0_"
              data-rfd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_0_"
            data-rfd-draggable-id="board_2_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_0_-hidden-text-_r_1_"
              class="SidebarBoardItem subitem "
              data-rfd-drag-handle-context-id="_r_0_"
              data-rfd-drag-handle-draggable-id="board_2_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar collapsed with active board in it 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_e_"
    data-rfd-droppable-id="droppable_id"
  >
    <div
      data-rfd-draggable-context-id="_r_e_"
      data-rfd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rfd-droppable-context-id="_r_e_"
          data-rfd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category collapsed "
          >
            <div
              aria-describedby="rfd-hidden-text-_r_e_-hidden-text-_r_f_"
              class="octo-sidebar-title category-title"
              data-rfd-drag-handle-context-id="_r_e_"
              data-rfd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_e_"
            data-rfd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_e_-hidden-text-_r_f_"
              class="SidebarBoardItem subitem active"
              data-rfd-drag-handle-context-id="_r_e_"
              data-rfd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="SidebarBoardItem sidebar-view-item active"
            >
              <svg
                class="BoardIcon Icon"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  opacity="0.8"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
              <div
                class="octo-sidebar-title"
                title="view title"
              >
                view title
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar collapsed without active board 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_7_"
    data-rfd-droppable-id="droppable_id"
  >
    <div
      data-rfd-draggable-context-id="_r_7_"
      data-rfd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rfd-droppable-context-id="_r_7_"
          data-rfd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category collapsed "
          >
            <div
              aria-describedby="rfd-hidden-text-_r_7_-hidden-text-_r_8_"
              class="octo-sidebar-title category-title"
              data-rfd-drag-handle-context-id="_r_7_"
              data-rfd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-right ChevronRightIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar template close other 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_t_"
    data-rfd-droppable-id="droppable_id"
  >
    <div
      data-rfd-draggable-context-id="_r_t_"
      data-rfd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rfd-droppable-context-id="_r_t_"
          data-rfd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category expanded "
          >
            <div
              aria-describedby="rfd-hidden-text-_r_t_-hidden-text-_r_u_"
              class="octo-sidebar-title category-title"
              data-rfd-drag-handle-context-id="_r_t_"
              data-rfd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-down ChevronDownIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_t_"
            data-rfd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_t_-hidden-text-_r_u_"
              class="SidebarBoardItem subitem "
              data-rfd-drag-handle-context-id="_r_t_"
              data-rfd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_t_"
            data-rfd-draggable-id="board_2_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_t_-hidden-text-_r_u_"
              class="SidebarBoardItem subitem active"
              data-rfd-drag-handle-context-id="_r_t_"
              data-rfd-drag-handle-draggable-id="board_2_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="SidebarBoardItem sidebar-view-item active"
            >
              <svg
                class="BoardIcon Icon"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  opacity="0.8"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
              <div
                class="octo-sidebar-title"
                title="view title"
              >
                view title
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/sidebarCategory sidebar template close self 1`] = `
<div>
  <div
    data-rfd-droppable-context-id="_r_m_"
    data-rfd-droppable-id="droppable_id"
  >
    <div
      data-rfd-draggable-context-id="_r_m_"
      data-rfd-draggable-id="category_1_id"
    >
      <div
        class="SidebarCategory"
      >
        <div
          class="categoryBoardsDroppableArea"
          data-rfd-droppable-context-id="_r_m_"
          data-rfd-droppable-id="category_1_id"
        >
          <div
            class="octo-sidebar-item category expanded "
          >
            <div
              aria-describedby="rfd-hidden-text-_r_m_-hidden-text-_r_n_"
              class="octo-sidebar-title category-title"
              data-rfd-drag-handle-context-id="_r_m_"
              data-rfd-drag-handle-draggable-id="category_1_id"
              draggable="false"
              role="button"
              tabindex="0"
              title="Category 1"
            >
              <i
                class="CompassIcon icon-chevron-down ChevronDownIcon"
              />
              Category 1
              <div
                class="sidebarCategoriesTour"
              />
            </div>
            <div
              class=""
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  class="IconButton"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_m_"
            data-rfd-draggable-id="board_1_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_m_-hidden-text-_r_n_"
              class="SidebarBoardItem subitem active"
              data-rfd-drag-handle-context-id="_r_m_"
              data-rfd-drag-handle-draggable-id="board_1_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="SidebarBoardItem sidebar-view-item active"
            >
              <svg
                class="BoardIcon Icon"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g
                  opacity="0.8"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </g>
              </svg>
              <div
                class="octo-sidebar-title"
                title="view title"
              >
                view title
              </div>
            </div>
          </div>
          <div
            data-rfd-draggable-context-id="_r_m_"
            data-rfd-draggable-id="board_2_id"
          >
            <div
              aria-describedby="rfd-hidden-text-_r_m_-hidden-text-_r_n_"
              class="SidebarBoardItem subitem "
              data-rfd-drag-handle-context-id="_r_m_"
              data-rfd-drag-handle-draggable-id="board_2_id"
              draggable="false"
              role="button"
              tabindex="0"
            >
              <div
                class="octo-sidebar-icon"
              >
                i
              </div>
              <div
                class="octo-sidebar-title"
                title="board title"
              >
                board title
              </div>
              <div>
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper x"
                  role="button"
                >
                  <button
                    class="IconButton"
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
